Restyle navbar: fixed position throughout the app, align item properly

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,12 +1,16 @@
+.main-nav {
+    /* position: fixed; */
+	/* border: 3px solid green; */
+    width: 100%;
+	height: 15vh;
+    /* background-color: rgba(240, 248, 255, 0.95); */
+    /* box-shadow: 10px 10px 20px #ccc; */
+}
+
 .App-logo {
-	margin-left: 80%;
-	margin-top: 20px;
-	/* vertical-align: middle; */
 	height: 70px;
     width: auto;
     z-index: 1;
-    /* background-color: rgba(255, 255, 255); */
-	/* border: 1px solid blue; */
 }
 
 /* @media screen and (min-width: 300px) {
@@ -22,62 +26,33 @@
 	}
 } */
 
-b {
-    /* font-family: "Great Vibes", cursive; */
-    font-family: 'monospace';
-    /* border: 1px solid blue; */
-    font-size: 50px;
-    /* margin-left: 25%; */
-	/* margin-top: 100px; */
-    /* font-weight: bold; */
-    /* color: rgb(5, 22, 19); */
-    /* color: azure; */
-    letter-spacing: 0.2rem;
-    color: rgb(17, 35, 32);
-    text-shadow: 0 3.5px 1px rgb(229, 166, 31);
+.fa-bars:before {
+	color: var(--color-on-background) !important;
 }
 
-.main-nav {
-	/* border: 3px solid green; */
-    /* background-color: rgba(240, 248, 255, 0.95); */
-	height: 15vh;
-    /* box-shadow: 10px 10px 20px #ccc; */
+.navbar-toggler {
+	padding: 0.5rem;
+	border: none !important;
 }
 
-#nav-btn {
-	background-color: rgb(234, 175, 87);
-    text-transform:capitalize;
-    border: none;
-    border-radius: 24px;
-    font-family: 'Akaya Kanadaka';
-    color: rgb(152, 71, 9);
-    font-weight: bold;
-    padding: 2.5px 12.5px;
-    margin-right: 1rem;
-    margin-bottom: 15%;
-    font-size: 28px;
-    cursor: pointer;
+button.navbar-toggler:focus {
+	outline: none;
 }
 
-#nav-btn:hover {
-    background-color: rgb(152, 71, 9);
-	color: rgb(234, 175, 87);
-    box-shadow: 5px 5px 10px #888888;
-}
-
-#nav-link {
+.nav-link {
+    /* border: solid 1px red; */
+    position: relative;
     color: black;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 500;
     font-size: 23px;
-    margin-right: 60%;
+    margin-right: 8vw !important;
     overflow: hidden;
     display: block;
-    position: relative;
-    padding: 0.2em 0;
+    /* padding: 0.2em 0; */
 }
 
-#nav-link::after {
+.nav-link::after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -90,6 +65,6 @@ b {
     transform: translate3d(-100%, 0, 0);
 }
 
-#nav-link:hover::after, #nav-link:focus::after {
+.nav-link:hover::after, #nav-link:focus::after {
     transform: translate3d(0, 0, 0);
 }
